--- a/index.html
+++ b/index.html
@@ -6,18 +6,69 @@
     <title>Thomas Rothen's homepage</title>
 </head>
 <body>
-    <img src="Tom.png" alt="tom profile picture">
-    <h1>Thomas Rothen</h1>
-    <p><em>Founder and CEO of <strong>stratlife</strong>.</em></p>
-    <p>I am interested in the future, living in the present, and learning from the past.</p>
-    <p> I ❤️ learning new things, applying them in real life, and growing.</p>
+    <table cellspacing="20">
+        <tr>
+            <td><img src="Tom.png" alt="tom profile picture"></td>
+            <td>
+                <h1>Thomas Rothen</h1>
+                <p><em>Founder and CEO of <strong>stratlife</strong>.</em></p>
+                <p>I am interested in the future, living in the present, and learning from the past.</p>
+                <p> I ❤️ learning new things, applying them in real life, and growing.</p>
+            </td>
+        </tr>
+    </table>  
     <hr>
-    <h3>My Top Five in Life</h3>
+    <h3>My Top Three in Life</h3>
     <ul>
         <li>My energy</li>
         <li>My inspiration</li>
         <li>My connection</li>
     </ul>
+    <hr>
+    <h3>Work Experience</h3>
+    <table cellspacing="10">
+      <thead>
+        <tr>
+          <th>Dates</th>
+          <th>Work</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>2015-today</td>
+          <td>Head of IT & FM at The University of Applied Sciences Vienna </td>
+        </tr>
+        <tr>
+          <td>2012-2014</td>
+          <td>Director Service Delivery Dimension Data</td>
+        </tr>
+        <tr>
+          <td>2009-2012</td>
+          <td>Head of Service Management A1 Telekom Austria</td>
+        </tr>
+        <tr>
+            <td>2002-2009</td>
+            <td>Technical Account Manager, Services Manager, Senior Consultant, Chief Security Advisor @ Microsoft</td>
+          </tr>
+      </tbody>
+    </table>
+<hr>
+    <h3>Skills</h3>
+    <table cellspacing="10">
+      <tr>
+        <td>iOS Development</td>
+        <td>⭐️⭐️⭐️⭐️⭐️</td>
+      </tr>
+      <tr>
+        <td>Web Development</td>
+        <td>⭐️⭐️⭐️⭐️⭐️</td>
+      </tr>
+      <tr>
+        <td>Drawing</td>
+        <td>⭐️</td>
+      </tr>
+    </table>
+<hr>
     <a href="hobbies.html">My Hobbies</a>
     <br>
     <a href="contact.html">Contact me</a>
