--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
         </tr>
         <tr>
           <td>2012-2014</td>
-          <td>Director Service Delivery Dimension Data</td>
+          <td>Director Service Delivery at Dimension Data</td>
         </tr>
         <tr>
           <td>2009-2012</td>
-          <td>Head of Service Management A1 Telekom Austria</td>
+          <td>Head of Service Management at A1 Telekom Austria</td>
         </tr>
         <tr>
             <td>2002-2009</td>
-            <td>Technical Account Manager, Services Manager, Senior Consultant, Chief Security Advisor @ Microsoft</td>
+            <td>Technical Account Manager, Services Manager, Senior Consultant, Chief Security Advisor at Microsoft</td>
           </tr>
       </tbody>
     </table>
