--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,16 @@
 </head>
 <body>
     <h3>Contact me</h3>
-    <p>My email:</p>
+    <p>My email: tomdelom@hotmail.com</p>
+
+    <form action="mailto:tomdelom@hotmail.com" method="POST" enctype="text/plain">
+        <label>Your Name:</label>
+        <input type="text" name="yourName" value=""><br>
+        <label>Your Email:</label>
+        <input type="email" name="yourEmail" value=""><br>
+        <label>Your Message:</label><br>
+        <textarea name="yourMessage" cols="30" rows="10"></textarea><br>
+        <input type="submit" name="">
+    </form>
 </body>
 </html>
