--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="description" content="The website of Thomas Rothen provides an overview of the life and interests of Thomas Rothen. It also gives you insight into the world and mind of Thomas. ">
     <title>Thomas Rothen's homepage</title>
+    <link rel="stylesheet" href="css/styles.css">
+
 </head>
 <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="Tom.png" alt="tom profile picture"></td>
+            <td><img src="images/Tom.png" alt="tom profile picture"></td>
             <td>
                 <h1>Thomas Rothen</h1>
                 <p><em>Founder and CEO of <strong>stratlife</strong>.</em></p>
