--- a/contact.html
+++ b/contact.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="description" content="The contact information of Thomas Rothen. How to reach Thomas Rothen. ">
     <title>Contact me</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <h3>Contact me</h3>
     <p>My email: tomdelom@hotmail.com</p>
-
+<hr>
     <form action="mailto:tomdelom@hotmail.com" method="POST" enctype="text/plain">
         <label>Your Name:</label>
         <input type="text" name="yourName" value=""><br>
