--- a/hobbies.html
+++ b/hobbies.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="description" content="The hobbies of Thomas Rothen. ">
     <title>My hobbies</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <h3>My Hobbies</h3>
